--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is my heading.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>Welcome to git and github</p>
 </body>
 </html>
