--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>This is my heading.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     <p>Welcome to git and github</p>
+    <h2>This is Boby Kardam.</h2>
 </body>
 </html>
